[package]
name = "its_mypic_image_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["http2"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower-http = { version = "0.6.4", features = ["trace", "cors"] }
tracing = { version = "0.1.41"}
tracing-subscriber = { version = "0.3.20" }
anyhow = { version = "1.0.100" }
regex = { version = "1.11.3" }
image = { version = "0.25.6" }
dotenvy = { version = "0.15.7" }
chrono = { version = "0.4.41" }
parking_lot = { version = "0.12.4" }
priority-queue = { version = "2.7.0" }
crossbeam = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"
